compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> external_declarations
Rule 2     external_declarations -> external_declarations external_declaration
Rule 3     external_declarations -> external_declaration
Rule 4     external_declaration -> type ID LPAREN params RPAREN block
Rule 5     external_declaration -> statement
Rule 6     params -> params COMMA param
Rule 7     params -> param
Rule 8     params -> <empty>
Rule 9     param -> type ID
Rule 10    block -> LBRACE statements RBRACE
Rule 11    statements -> statements statement
Rule 12    statements -> statement
Rule 13    statement -> type ID ASSIGN expr SEMICOLON
Rule 14    statement -> type ID SEMICOLON
Rule 15    statement -> ID ASSIGN expr SEMICOLON
Rule 16    statement -> block
Rule 17    statement -> IF LPAREN expr RPAREN statement
Rule 18    statement -> IF LPAREN expr RPAREN statement ELSE statement
Rule 19    statement -> WHILE LPAREN expr RPAREN statement
Rule 20    statement -> RETURN expr SEMICOLON
Rule 21    statement -> expr SEMICOLON
Rule 22    type -> INT
Rule 23    type -> FLOAT
Rule 24    type -> CHAR
Rule 25    expr -> expr PLUS term
Rule 26    expr -> expr MINUS term
Rule 27    expr -> expr LT term
Rule 28    expr -> expr GT term
Rule 29    expr -> expr LE term
Rule 30    expr -> expr GE term
Rule 31    expr -> expr EQ term
Rule 32    expr -> expr NEQ term
Rule 33    expr -> term
Rule 34    term -> term MULTIPLY factor
Rule 35    term -> term DIVIDE factor
Rule 36    term -> factor
Rule 37    factor -> NUMBER
Rule 38    factor -> ID
Rule 39    factor -> ID LPAREN args RPAREN
Rule 40    args -> args COMMA expr
Rule 41    args -> expr
Rule 42    args -> <empty>
Rule 43    factor -> LPAREN expr RPAREN

Terminals, with rules where they appear

ASSIGN               : 13 15
CHAR                 : 24
COMMA                : 6 40
DIVIDE               : 35
ELSE                 : 18
EQ                   : 31
FLOAT                : 23
GE                   : 30
GT                   : 28
ID                   : 4 9 13 14 15 38 39
IF                   : 17 18
INT                  : 22
LBRACE               : 10
LE                   : 29
LPAREN               : 4 17 18 19 39 43
LT                   : 27
MINUS                : 26
MULTIPLY             : 34
NEQ                  : 32
NUMBER               : 37
PLUS                 : 25
RBRACE               : 10
RETURN               : 20
RPAREN               : 4 17 18 19 39 43
SEMICOLON            : 13 14 15 20 21
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

args                 : 39 40
block                : 4 16
expr                 : 13 15 17 18 19 20 21 25 26 27 28 29 30 31 32 40 41 43
external_declaration : 2 3
external_declarations : 1 2
factor               : 34 35 36
param                : 6 7
params               : 4 6
program              : 0
statement            : 5 11 12 17 18 18 19
statements           : 10 11
term                 : 25 26 27 28 29 30 31 32 33 34 35
type                 : 4 9 13 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_declarations
    (2) external_declarations -> . external_declarations external_declaration
    (3) external_declarations -> . external_declaration
    (4) external_declaration -> . type ID LPAREN params RPAREN block
    (5) external_declaration -> . statement
    (22) type -> . INT
    (23) type -> . FLOAT
    (24) type -> . CHAR
    (13) statement -> . type ID ASSIGN expr SEMICOLON
    (14) statement -> . type ID SEMICOLON
    (15) statement -> . ID ASSIGN expr SEMICOLON
    (16) statement -> . block
    (17) statement -> . IF LPAREN expr RPAREN statement
    (18) statement -> . IF LPAREN expr RPAREN statement ELSE statement
    (19) statement -> . WHILE LPAREN expr RPAREN statement
    (20) statement -> . RETURN expr SEMICOLON
    (21) statement -> . expr SEMICOLON
    (10) block -> . LBRACE statements RBRACE
    (25) expr -> . expr PLUS term
    (26) expr -> . expr MINUS term
    (27) expr -> . expr LT term
    (28) expr -> . expr GT term
    (29) expr -> . expr LE term
    (30) expr -> . expr GE term
    (31) expr -> . expr EQ term
    (32) expr -> . expr NEQ term
    (33) expr -> . term
    (34) term -> . term MULTIPLY factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . ID LPAREN args RPAREN
    (43) factor -> . LPAREN expr RPAREN

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    ID              shift and go to state 5
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    RETURN          shift and go to state 15
    LBRACE          shift and go to state 16
    NUMBER          shift and go to state 19
    LPAREN          shift and go to state 6

    program                        shift and go to state 1
    external_declarations          shift and go to state 2
    external_declaration           shift and go to state 3
    type                           shift and go to state 4
    block                          shift and go to state 7
    statement                      shift and go to state 8
    expr                           shift and go to state 12
    term                           shift and go to state 17
    factor                         shift and go to state 18

state 1

    (0) S' -> program .



state 2

    (1) program -> external_declarations .
    (2) external_declarations -> external_declarations . external_declaration
    (4) external_declaration -> . type ID LPAREN params RPAREN block
    (5) external_declaration -> . statement
    (22) type -> . INT
    (23) type -> . FLOAT
    (24) type -> . CHAR
    (13) statement -> . type ID ASSIGN expr SEMICOLON
    (14) statement -> . type ID SEMICOLON
    (15) statement -> . ID ASSIGN expr SEMICOLON
    (16) statement -> . block
    (17) statement -> . IF LPAREN expr RPAREN statement
    (18) statement -> . IF LPAREN expr RPAREN statement ELSE statement
    (19) statement -> . WHILE LPAREN expr RPAREN statement
    (20) statement -> . RETURN expr SEMICOLON
    (21) statement -> . expr SEMICOLON
    (10) block -> . LBRACE statements RBRACE
    (25) expr -> . expr PLUS term
    (26) expr -> . expr MINUS term
    (27) expr -> . expr LT term
    (28) expr -> . expr GT term
    (29) expr -> . expr LE term
    (30) expr -> . expr GE term
    (31) expr -> . expr EQ term
    (32) expr -> . expr NEQ term
    (33) expr -> . term
    (34) term -> . term MULTIPLY factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . ID LPAREN args RPAREN
    (43) factor -> . LPAREN expr RPAREN

    $end            reduce using rule 1 (program -> external_declarations .)
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    ID              shift and go to state 5
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    RETURN          shift and go to state 15
    LBRACE          shift and go to state 16
    NUMBER          shift and go to state 19
    LPAREN          shift and go to state 6

    external_declaration           shift and go to state 20
    type                           shift and go to state 4
    block                          shift and go to state 7
    statement                      shift and go to state 8
    expr                           shift and go to state 12
    term                           shift and go to state 17
    factor                         shift and go to state 18

state 3

    (3) external_declarations -> external_declaration .

    INT             reduce using rule 3 (external_declarations -> external_declaration .)
    FLOAT           reduce using rule 3 (external_declarations -> external_declaration .)
    CHAR            reduce using rule 3 (external_declarations -> external_declaration .)
    ID              reduce using rule 3 (external_declarations -> external_declaration .)
    IF              reduce using rule 3 (external_declarations -> external_declaration .)
    WHILE           reduce using rule 3 (external_declarations -> external_declaration .)
    RETURN          reduce using rule 3 (external_declarations -> external_declaration .)
    LBRACE          reduce using rule 3 (external_declarations -> external_declaration .)
    NUMBER          reduce using rule 3 (external_declarations -> external_declaration .)
    LPAREN          reduce using rule 3 (external_declarations -> external_declaration .)
    $end            reduce using rule 3 (external_declarations -> external_declaration .)


state 4

    (4) external_declaration -> type . ID LPAREN params RPAREN block
    (13) statement -> type . ID ASSIGN expr SEMICOLON
    (14) statement -> type . ID SEMICOLON

    ID              shift and go to state 21


state 5

    (15) statement -> ID . ASSIGN expr SEMICOLON
    (38) factor -> ID .
    (39) factor -> ID . LPAREN args RPAREN

    ASSIGN          shift and go to state 22
    MULTIPLY        reduce using rule 38 (factor -> ID .)
    DIVIDE          reduce using rule 38 (factor -> ID .)
    SEMICOLON       reduce using rule 38 (factor -> ID .)
    PLUS            reduce using rule 38 (factor -> ID .)
    MINUS           reduce using rule 38 (factor -> ID .)
    LT              reduce using rule 38 (factor -> ID .)
    GT              reduce using rule 38 (factor -> ID .)
    LE              reduce using rule 38 (factor -> ID .)
    GE              reduce using rule 38 (factor -> ID .)
    EQ              reduce using rule 38 (factor -> ID .)
    NEQ             reduce using rule 38 (factor -> ID .)
    LPAREN          shift and go to state 23


state 6

    (43) factor -> LPAREN . expr RPAREN
    (25) expr -> . expr PLUS term
    (26) expr -> . expr MINUS term
    (27) expr -> . expr LT term
    (28) expr -> . expr GT term
    (29) expr -> . expr LE term
    (30) expr -> . expr GE term
    (31) expr -> . expr EQ term
    (32) expr -> . expr NEQ term
    (33) expr -> . term
    (34) term -> . term MULTIPLY factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . ID LPAREN args RPAREN
    (43) factor -> . LPAREN expr RPAREN

    NUMBER          shift and go to state 19
    ID              shift and go to state 25
    LPAREN          shift and go to state 6

    expr                           shift and go to state 24
    term                           shift and go to state 17
    factor                         shift and go to state 18

state 7

    (16) statement -> block .

    INT             reduce using rule 16 (statement -> block .)
    FLOAT           reduce using rule 16 (statement -> block .)
    CHAR            reduce using rule 16 (statement -> block .)
    ID              reduce using rule 16 (statement -> block .)
    IF              reduce using rule 16 (statement -> block .)
    WHILE           reduce using rule 16 (statement -> block .)
    RETURN          reduce using rule 16 (statement -> block .)
    LBRACE          reduce using rule 16 (statement -> block .)
    NUMBER          reduce using rule 16 (statement -> block .)
    LPAREN          reduce using rule 16 (statement -> block .)
    $end            reduce using rule 16 (statement -> block .)
    RBRACE          reduce using rule 16 (statement -> block .)
    ELSE            reduce using rule 16 (statement -> block .)


state 8

    (5) external_declaration -> statement .

    INT             reduce using rule 5 (external_declaration -> statement .)
    FLOAT           reduce using rule 5 (external_declaration -> statement .)
    CHAR            reduce using rule 5 (external_declaration -> statement .)
    ID              reduce using rule 5 (external_declaration -> statement .)
    IF              reduce using rule 5 (external_declaration -> statement .)
    WHILE           reduce using rule 5 (external_declaration -> statement .)
    RETURN          reduce using rule 5 (external_declaration -> statement .)
    LBRACE          reduce using rule 5 (external_declaration -> statement .)
    NUMBER          reduce using rule 5 (external_declaration -> statement .)
    LPAREN          reduce using rule 5 (external_declaration -> statement .)
    $end            reduce using rule 5 (external_declaration -> statement .)


state 9

    (22) type -> INT .

    ID              reduce using rule 22 (type -> INT .)


state 10

    (23) type -> FLOAT .

    ID              reduce using rule 23 (type -> FLOAT .)


state 11

    (24) type -> CHAR .

    ID              reduce using rule 24 (type -> CHAR .)


state 12

    (21) statement -> expr . SEMICOLON
    (25) expr -> expr . PLUS term
    (26) expr -> expr . MINUS term
    (27) expr -> expr . LT term
    (28) expr -> expr . GT term
    (29) expr -> expr . LE term
    (30) expr -> expr . GE term
    (31) expr -> expr . EQ term
    (32) expr -> expr . NEQ term

    SEMICOLON       shift and go to state 26
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    LT              shift and go to state 29
    GT              shift and go to state 30
    LE              shift and go to state 31
    GE              shift and go to state 32
    EQ              shift and go to state 33
    NEQ             shift and go to state 34


state 13

    (17) statement -> IF . LPAREN expr RPAREN statement
    (18) statement -> IF . LPAREN expr RPAREN statement ELSE statement

    LPAREN          shift and go to state 35


state 14

    (19) statement -> WHILE . LPAREN expr RPAREN statement

    LPAREN          shift and go to state 36


state 15

    (20) statement -> RETURN . expr SEMICOLON
    (25) expr -> . expr PLUS term
    (26) expr -> . expr MINUS term
    (27) expr -> . expr LT term
    (28) expr -> . expr GT term
    (29) expr -> . expr LE term
    (30) expr -> . expr GE term
    (31) expr -> . expr EQ term
    (32) expr -> . expr NEQ term
    (33) expr -> . term
    (34) term -> . term MULTIPLY factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . ID LPAREN args RPAREN
    (43) factor -> . LPAREN expr RPAREN

    NUMBER          shift and go to state 19
    ID              shift and go to state 25
    LPAREN          shift and go to state 6

    expr                           shift and go to state 37
    term                           shift and go to state 17
    factor                         shift and go to state 18

state 16

    (10) block -> LBRACE . statements RBRACE
    (11) statements -> . statements statement
    (12) statements -> . statement
    (13) statement -> . type ID ASSIGN expr SEMICOLON
    (14) statement -> . type ID SEMICOLON
    (15) statement -> . ID ASSIGN expr SEMICOLON
    (16) statement -> . block
    (17) statement -> . IF LPAREN expr RPAREN statement
    (18) statement -> . IF LPAREN expr RPAREN statement ELSE statement
    (19) statement -> . WHILE LPAREN expr RPAREN statement
    (20) statement -> . RETURN expr SEMICOLON
    (21) statement -> . expr SEMICOLON
    (22) type -> . INT
    (23) type -> . FLOAT
    (24) type -> . CHAR
    (10) block -> . LBRACE statements RBRACE
    (25) expr -> . expr PLUS term
    (26) expr -> . expr MINUS term
    (27) expr -> . expr LT term
    (28) expr -> . expr GT term
    (29) expr -> . expr LE term
    (30) expr -> . expr GE term
    (31) expr -> . expr EQ term
    (32) expr -> . expr NEQ term
    (33) expr -> . term
    (34) term -> . term MULTIPLY factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . ID LPAREN args RPAREN
    (43) factor -> . LPAREN expr RPAREN

    ID              shift and go to state 5
    IF              shift and go to state 13
    WHILE           shift and go to state 14
    RETURN          shift and go to state 15
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    CHAR            shift and go to state 11
    LBRACE          shift and go to state 16
    NUMBER          shift and go to state 19
    LPAREN          shift and go to state 6

    statements                     shift and go to state 38
    statement                      shift and go to state 39
    type                           shift and go to state 40
    expr                           shift and go to state 12
    block                          shift and go to state 7
    term                           shift and go to state 17
    factor                         shift and go to state 18

state 17

    (33) expr -> term .
    (34) term -> term . MULTIPLY factor
    (35) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 33 (expr -> term .)
    PLUS            reduce using rule 33 (expr -> term .)
    MINUS           reduce using rule 33 (expr -> term .)
    LT              reduce using rule 33 (expr -> term .)
    GT              reduce using rule 33 (expr -> term .)
    LE              reduce using rule 33 (expr -> term .)
    GE              reduce using rule 33 (expr -> term .)
    EQ              reduce using rule 33 (expr -> term .)
    NEQ             reduce using rule 33 (expr -> term .)
    RPAREN          reduce using rule 33 (expr -> term .)
    COMMA           reduce using rule 33 (expr -> term .)
    MULTIPLY        shift and go to state 41
    DIVIDE          shift and go to state 42


state 18

    (36) term -> factor .

    MULTIPLY        reduce using rule 36 (term -> factor .)
    DIVIDE          reduce using rule 36 (term -> factor .)
    SEMICOLON       reduce using rule 36 (term -> factor .)
    PLUS            reduce using rule 36 (term -> factor .)
    MINUS           reduce using rule 36 (term -> factor .)
    LT              reduce using rule 36 (term -> factor .)
    GT              reduce using rule 36 (term -> factor .)
    LE              reduce using rule 36 (term -> factor .)
    GE              reduce using rule 36 (term -> factor .)
    EQ              reduce using rule 36 (term -> factor .)
    NEQ             reduce using rule 36 (term -> factor .)
    RPAREN          reduce using rule 36 (term -> factor .)
    COMMA           reduce using rule 36 (term -> factor .)


state 19

    (37) factor -> NUMBER .

    MULTIPLY        reduce using rule 37 (factor -> NUMBER .)
    DIVIDE          reduce using rule 37 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 37 (factor -> NUMBER .)
    PLUS            reduce using rule 37 (factor -> NUMBER .)
    MINUS           reduce using rule 37 (factor -> NUMBER .)
    LT              reduce using rule 37 (factor -> NUMBER .)
    GT              reduce using rule 37 (factor -> NUMBER .)
    LE              reduce using rule 37 (factor -> NUMBER .)
    GE              reduce using rule 37 (factor -> NUMBER .)
    EQ              reduce using rule 37 (factor -> NUMBER .)
    NEQ             reduce using rule 37 (factor -> NUMBER .)
    RPAREN          reduce using rule 37 (factor -> NUMBER .)
    COMMA           reduce using rule 37 (factor -> NUMBER .)


state 20

    (2) external_declarations -> external_declarations external_declaration .

    INT             reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    FLOAT           reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    CHAR            reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    ID              reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    IF              reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    WHILE           reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    RETURN          reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    LBRACE          reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    NUMBER          reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    LPAREN          reduce using rule 2 (external_declarations -> external_declarations external_declaration .)
    $end            reduce using rule 2 (external_declarations -> external_declarations external_declaration .)


state 21

    (4) external_declaration -> type ID . LPAREN params RPAREN block
    (13) statement -> type ID . ASSIGN expr SEMICOLON
    (14) statement -> type ID . SEMICOLON

    LPAREN          shift and go to state 43
    ASSIGN          shift and go to state 44
    SEMICOLON       shift and go to state 45


state 22

    (15) statement -> ID ASSIGN . expr SEMICOLON
    (25) expr -> . expr PLUS term
    (26) expr -> . expr MINUS term
    (27) expr -> . expr LT term
    (28) expr -> . expr GT term
    (29) expr -> . expr LE term
    (30) expr -> . expr GE term
    (31) expr -> . expr EQ term
    (32) expr -> . expr NEQ term
    (33) expr -> . term
    (34) term -> . term MULTIPLY factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . ID LPAREN args RPAREN
    (43) factor -> . LPAREN expr RPAREN

    NUMBER          shift and go to state 19
    ID              shift and go to state 25
    LPAREN          shift and go to state 6

    expr                           shift and go to state 46
    term                           shift and go to state 17
    factor                         shift and go to state 18

state 23

    (39) factor -> ID LPAREN . args RPAREN
    (40) args -> . args COMMA expr
    (41) args -> . expr
    (42) args -> .
    (25) expr -> . expr PLUS term
    (26) expr -> . expr MINUS term
    (27) expr -> . expr LT term
    (28) expr -> . expr GT term
    (29) expr -> . expr LE term
    (30) expr -> . expr GE term
    (31) expr -> . expr EQ term
    (32) expr -> . expr NEQ term
    (33) expr -> . term
    (34) term -> . term MULTIPLY factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . NUMBER
    (38) factor -> . ID
    (39) factor -> . ID LPAREN args RPAREN
    (43) factor -> . LPAREN expr RPAREN

    RPAREN          reduce using rule 42 (args -> .)
    COMMA           reduce using rule 42 (args -> .)
    NUMBER          shift and go to state 19
    ID              shift and go to state 25
    LPAREN          shift and go to state 6

    args                           shift and go to state 47
    expr                           shift and go to state 48
    term                           shift and go to state 17
    factor                         shift and go to state 18

state 24

    (43) factor -> LPAREN expr . RPAREN
    (25) expr -> expr . PLUS term
    (26) expr -> expr . MINUS term
    (27) expr -> expr . LT term
    (28) expr -> expr . GT term
    (29) expr -> expr . LE term
    (30) expr -> expr . GE term
    (31) expr -> expr . EQ term
    (32) expr -> expr . NEQ term

    RPAREN          shift and go to state 49
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    LT              shift and go to state 29
    GT              shift and go to state 30
    LE              shift and go to state 31
    GE              shift and go to state 32
    EQ              shift and go to state 33
    NEQ             shift and go to state 34


state 25

    (38) factor -> ID .
    (39) factor -> ID . LPAREN args RPAREN
